--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I am hosted with GitHub Pages.</p>
+<img src="/i/eg_tulip.jpg"  alt="大同大学 - 雷旭彪" />
 </body>
 </html>
