--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I am hosted with GitHub Pages.</p>
-<img src="http://baike.baidu.com/pic/%E8%8B%B1%E5%9B%BD%E7%9F%AD%E6%AF%9B%E7%8C%AB/672846/0/ca1349540923dd5495674a7ed609b3de9c824894?fr=lemma&ct=single#aid=0&pic=ca1349540923dd5495674a7ed609b3de9c824894"  alt="大同大学 - 雷旭彪" />
+<img src="/images/Einstein.jpg"  alt="大同大学 - 雷旭彪" />
 </body>
 </html>
